Adding user profile - PART 5

--- a/html/profile.html
+++ b/html/profile.html
@@ -124,11 +124,11 @@
       <form role="form" id="formProfile" enctype="multipart/form-data">
         <b>Nome:</b>
         <div class="input-group input-group-outline mb-3">
-          <input onClick="this.select();" name="name" id="inputTextName" type="text" class="form-control"/>
+          <input name="name" id="inputTextName" type="text" class="form-control"/>
         </div>
         <b>Login:</b>
         <div class="input-group input-group-outline mb-3">
-          <input onClick="this.select();" name="login" id="inputTextLogin" type="text" class="form-control"/>
+          <input name="login" id="inputTextLogin" type="text" class="form-control"/>
         </div>
         <b>Curso</b>
         <div class="input-group input-group-outline mb-3">
@@ -145,7 +145,7 @@
         </div>
         <b>Data de Nascimento:</b>
         <div class="input-group input-group-outline mb-3">
-          <input name="birthdayDate" onClick="this.select();" id="inputBirthdayDate" type="text" class="form-control"/>
+          <input name="birthdayDate" id="inputBirthdayDate" type="text" class="form-control"/>
         </div>
         <b>Foto do Perfil:</b>
         <div class="input-group input-group-outline mb-3">
@@ -154,11 +154,11 @@
         <br/><br/>
         <div class="input-group input-group-outline mb-3">
           <label for="inputTextPassword1" class="form-label">Senha</label>
-          <input onClick="this.select();" name="password1" id="inputTextPassword1" type="password" class="form-control"/>
+          <input name="password1" id="inputTextPassword1" type="password" class="form-control"/>
         </div>
         <div class="input-group input-group-outline mb-3">
           <label for="inputTextPassword2" class="form-label">Repetir Senha</label>
-          <input onClick="this.select();" name="password2" id="inputTextPassword2" type="password" class="form-control"/>
+          <input name="password2" id="inputTextPassword2" type="password" class="form-control"/>
         </div>
         <br/>
         <div class="text-center">
