--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -447,6 +447,7 @@
   <script src="/js/existing.js"></script>
   <script src="/js/jquery.modal.min.js"></script>
   <script src="/js/common.js"></script>
+  <script src="/js/imagesloaded.pkgd.min.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/drawflow.js" type="module"></script>
   <script src="/js/radarChartEvcReport.js"></script>
