Adding user profile - PART 11

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -183,6 +183,7 @@
   <script src="/js/jsonata.min.js"></script>
   <script src="/js/underscore.js"></script>
   <script src="/js/amCharts.js"></script>
+  <script src="/js/math.js"></script>
   <script src="/js/notify.min.js"></script>
   <script src="/js/flow.js"></script>
   <script src="/js/animated.js"></script>
