--- a/html/profile.html
+++ b/html/profile.html
@@ -123,7 +123,7 @@
     <div style="width: 50%; margin: auto">
       <div id="avatarContainer" class="container-fluid text-center">
         <a href="#" class="avatar avatar-xl rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" aria-label="Foto do Perfil" data-bs-original-title="Foto do Perfil">
-          <img id="userAvatar" src="/avatars/0.jpg" alt="Foto do Perfil">
+          <img id="userAvatar" src="/img/0.jpg" alt="Foto do Perfil">
         </a>
       </div>
       <form role="form" id="formProfile" enctype="multipart/form-data">
