Adding pendencies info - PART 1

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -319,24 +319,7 @@
         </div>
       </div>
       <div class="row mt-4">
-        <div class="col-lg-4 col-md-6 mt-4 mb-4">
-          <div class="card ">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
-              <div class="bg-gradient-dark shadow-dark border-radius-lg">
-                <div id="allStudentsBubbleMotivationDiv" class="bubble-chart-custom"></div>
-              </div>
-            </div>
-            <div class="card-body">
-              <h6 class="mb-0 "> Motivação da Equipe </h6>
-              <hr class="dark horizontal">
-              <div class="d-flex">
-                <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Quanto maior o círculo, maior a motivação. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+        <div class="col-lg-6 col-md-6 mt-4 mb-4">
           <div class="card  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
               <div class="bg-gradient-success shadow-success border-radius-lg">
@@ -353,7 +336,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-4 mb-3">
+        <div class="col-lg-6 mt-4 mb-3">
           <div class="card ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
               <div class="bg-gradient-dark shadow-dark border-radius-lg">
@@ -366,6 +349,42 @@
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
                 <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do MOUSE para aplicar ZOOM. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-lg-6 col-md-6 mt-4 mb-4">
+          <div class="card ">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
+              <div class="bg-gradient-dark shadow-dark border-radius-lg">
+                <div id="allStudentsBubbleMotivationDiv" class="bubble-chart-custom"></div>
+              </div>
+            </div>
+            <div class="card-body">
+              <h6 class="mb-0 "> Motivação da Equipe </h6>
+              <hr class="dark horizontal">
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Quanto maior o círculo, maior a motivação. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mt-4 mb-3">
+          <div class="card ">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
+              <div class="shadow-dark border-radius-lg pendencies text-dark">
+                CONTEÚDO
+              </div>
+            </div>
+            <div class="card-body">
+              <h6 class="mb-0 "> Pendências da Equipe </h6>
+              <hr class="dark horizontal">
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Para sanar as pendências, cada membro deve visitar a seção "DECISÕES" e fazer as avaliações. </p>
               </div>
             </div>
           </div>
