--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -376,7 +376,17 @@
           <div class="card ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
               <div class="shadow-dark border-radius-lg pendencies text-dark">
-                CONTEÚDO
+                <div class="table-responsive">
+                  <table class="table align-items-center mb-0">
+                    <thead>
+                    <tr>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Membro</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Pendências</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tablePendencies"></tbody>
+                  </table>
+                </div>
               </div>
             </div>
             <div class="card-body">
