--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -128,6 +128,14 @@
               <div class="padding-left-80 pt-1">
                 DECISÕES PARA TOMAR
               </div>
+              <div class="pt-1 align-right margin-top-30-negative">
+                <label for="selectDecisionsFilter"><b>FILTRO:</b></label>
+                <select id="selectDecisionsFilter" class="form-select-lg">
+                  <option value="1">TODOS</option>
+                  <option value="2">AVALIADOS</option>
+                  <option value="3">NÃO AVALIADOS</option>
+                </select>
+              </div>
             </div>
             <div class="card-body">
               <hr class="dark horizontal my-0">
