Adding filters to page my-decisions - PART 2

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -129,12 +129,13 @@
                 DECISÕES PARA TOMAR
               </div>
               <div class="pt-1 align-right margin-top-30-negative">
-                <label for="selectDecisionsFilter"><b>FILTRO:</b></label>
+                <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
                 <select id="selectDecisionsFilter" class="form-select-lg">
                   <option value="1">TODOS</option>
                   <option value="2">AVALIADOS</option>
                   <option value="3">NÃO AVALIADOS</option>
                 </select>
+                <button id="btApplyFilter" class="btn btn-outline-white align-baseline" data-toggle="tooltip" title="Aplicar Filtro">APLICAR</button>
               </div>
             </div>
             <div class="card-body">
