Adding filters to page my-decisions - PART 3

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -132,8 +132,8 @@
                 <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
                 <select id="selectDecisionsFilter" class="form-select-lg">
                   <option value="1">TODOS</option>
-                  <option value="2">AVALIADOS</option>
-                  <option value="3">NÃO AVALIADOS</option>
+                  <option value="2">SOMENTE AVALIADOS</option>
+                  <option value="3">SOMENTE NÃO AVALIADOS</option>
                 </select>
                 <button id="btApplyFilter" class="btn btn-outline-white align-baseline" data-toggle="tooltip" title="Aplicar Filtro">APLICAR</button>
               </div>
