--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -377,9 +377,9 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
               <div class="shadow-dark border-radius-lg pendencies text-dark">
                 <div class="table-responsive">
-                  <table class="table align-items-center mb-0">
+                  <table class="table align-items-center mb-0 border-white border-line">
                     <thead>
-                    <tr>
+                    <tr class="light-silver">
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Membro</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Pendências</th>
                     </tr>
