New results page - PART 4

--- a/html/results.html
+++ b/html/results.html
@@ -143,34 +143,28 @@
                     <br/>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de empate no topo dos rankings, é possível segurar e arrastar
-                            as opções para reordená-las e alcançar a convergência. </p>
+                        <p class="mb-0 text-sm"> Em caso de empate no topo do ranking, é possível segurar e arrastar
+                            as opções para reordená-las. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Uma concordância a partir de 65% é considerada boa. </p>
+                        <p class="mb-0 text-sm"> Uma pontuação a partir de 65 e uma concordância a partir de 65% são
+                            consideradas boas. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Quando a primeira opção dos dois rankings forem iguais e a condordância
-                            do item do topo for maior ou igual a 65%, haverá convergência. Caso contrário, existe
-                            divergência. </p>
+                        <p class="mb-0 text-sm"> Em caso de pontuações baixas, podem ser efetuadas novas rodadas de
+                            avaliações pelos usuários, ou pode-se fazer uma escolha personalizada. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de divergências, pode-se evetuar uma nova rodada de avaliações
-                            pelos usuários, ou pode-se fazer uma escolha divergente. </p>
+                        <p class="mb-0 text-sm"> A ausência de opções significa que ainda existem stakeholders que
+                            precisam incluir/finalizar suas avaliações. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> A ausência de opções no ranking possui duas justificativas: (1) ela
-                            ainda não foi avaliada por todos os stakeholder, ou (2) existe alguma avaliação
-                            inválida/incompleta (com zero estrela). </p>
-                    </div>
-                    <div class="d-flex">
-                        <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Antes de tomar a decisão, certifique-se de checar o impacto da mesma em
-                            cada participante. Basta clicar na opção desejada. </p>
+                        <p class="mb-0 text-sm"> Antes de tomar uma decisão, certifique-se de checar o impacto da mesma
+                            em cada participante. Basta clicar na opção desejada. </p>
                     </div>
                 </div>
             </div>
