--- a/html/results.html
+++ b/html/results.html
@@ -204,7 +204,7 @@
                     <div class="col-lg-12 col-7 text-yellow">
                         <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO "<u><span id="labelImpactOption">---</span></u>"
                         </h6>
-                        <p>* Do mais impactado negativamente para o menos impactado</p>
+                        <p>* Os mais NEGATIVAMENTE IMPACTADOS estão no final da lista.</p>
                     </div>
                 </div>
             </div>
