--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -136,7 +136,7 @@
                         <div class="pt-1 align-right margin-top-30-negative">
                             <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
                             <select id="selectDecisionsFilter" class="form-select-lg">
-                                <option value="1">TODOS</option>
+                                <option value="1">TUDO</option>
                                 <option value="2">SOMENTE AVALIADOS</option>
                                 <option value="3">SOMENTE NÃO AVALIADOS</option>
                             </select>
