--- a/html/results.html
+++ b/html/results.html
@@ -132,7 +132,7 @@
                     <div class="pt-1 align-right margin-top-60-negative">
                         <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
                         <select id="selectDecisionsFilter" class="form-select-lg">
-                            <option value="1">TODOS</option>
+                            <option value="1">TUDO</option>
                             <option value="2">DECIDIDOS</option>
                             <option value="3">NÃO DECIDIDOS</option>
                         </select>
@@ -155,6 +155,12 @@
                         <i class="material-icons text-sm my-auto me-1">info</i>
                         <p class="mb-0 text-sm"> Em caso de pontuações baixas, podem ser efetuadas novas rodadas de
                             avaliações pelos usuários, ou pode-se fazer uma escolha personalizada. </p>
+                    </div>
+                    <div class="d-flex">
+                        <i class="material-icons text-sm my-auto me-1">info</i>
+                        <p class="mb-0 text-sm"> A pontuação de valorização, isto é, o quanto a escolha é desejada,
+                            também pode ser utilizada como critério de desempate. Para consultar essa pontuação, basta
+                            clicar no item desejado. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
