Adding about page

--- a/html/land-page.html
+++ b/html/land-page.html
@@ -107,7 +107,7 @@
           <div class="col-12 col-md-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="#" class="nav-link text-white">Sobre</a>
+                <a href="/about" target="_blank" class="nav-link text-white">Sobre</a>
               </li>
             </ul>
           </div>
