--- a/html/results.html
+++ b/html/results.html
@@ -195,7 +195,7 @@
                 <div class="col-lg-6">
                     <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Sobre</a>
+                            <a href="/about" target="_blank" class="nav-link">Sobre</a>
                         </li>
                     </ul>
                 </div>
