--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -408,7 +408,7 @@
                 © <script>
                 document.write(new Date().getFullYear())
               </script> - MO-DM -
-                <a href="#" class="font-weight-bold ">Alvaro Magnum</a> | <a href="#" class="font-weight-bold">Cristiano Araújo</a> | <a href="#" class="font-weight-bold">Patrícia Tedesco</a>
+                <a href="/about" target="_blank" class="font-weight-bold ">Alvaro Magnum</a> | <a href="/about" target="_blank" class="font-weight-bold">Cristiano Araújo</a> | <a href="/about" target="_blank" class="font-weight-bold">Patrícia Tedesco</a>
               </div>
             </div>
             <div class="col-lg-6">
