--- a/html/results.html
+++ b/html/results.html
@@ -207,9 +207,9 @@
             <div class="card-header pb-0">
                 <div class="row">
                     <div class="col-lg-12 col-7 text-yellow">
-                        <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO "<u><span id="labelImpactOption">---</span></u>"
+                        <h6 class="text-2xl">IMPACTO INDIVIDUAL DA OPÇÃO &nbsp;"<u><span id="labelImpactOption">---</span></u>"
                         </h6>
-                        <p>* Os mais NEGATIVAMENTE IMPACTADOS estão no final da lista.</p>
+                        <p>* Os usuários mais IMPACTADOS NEGATIVAMENTE estão no final da lista.</p>
                     </div>
                 </div>
             </div>
@@ -241,6 +241,10 @@
                         <p class="mb-0 text-sm"><span class="text-green">VERDE</span> - Impacto <b>positivo</b>. </p>
                     </div>
                 </div>
+                <br/><br/>
+                <center>
+                    <img src="/img/subtitle.jpg" alt="LEGENDA" class="max-width-60"/>
+                </center>
             </div>
         </div>
         <!-- POPUP IMPACTS - END -->
