--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -434,7 +434,7 @@
                             <div class="table-responsive">
                                 <table class="table align-items-center mb-0 border-white border-line cursor-pointer"
                                        onclick="window.location.href='/project/decisions?pendencies=true'"
-                                       data-toggle="tooltip" title="Clique para sanar as pendências, caso existam!">
+                                       data-toggle="tooltip" title="Clique para sanar as suas pendências, caso existam!">
                                     <thead>
                                     <tr class="light-silver">
                                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
