--- a/html/results.html
+++ b/html/results.html
@@ -164,8 +164,10 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> A ausência de opções significa que ainda existem stakeholders que
-                            precisam incluir/finalizar suas avaliações. </p>
+                        <p class="mb-0 text-sm"> Decisões com pendências, ou seja, aquelas onde existem stakeholders que
+                            precisam incluir/finalizar suas avaliações, não terão formação de ranking. Confira as
+                            pendências na dashboard.
+                        </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
