--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -159,7 +159,11 @@
                         <br/><br/>
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
-                            <p class="mb-0 text-sm" id="labelInfo"> Clique em uma opção para modificá-la. </p>
+                            <p class="mb-0 text-sm"> Clique em uma opção para modificá-la. </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> Ao reavaliar uma decisão que já foi finalizada, ela voltará ao estado de NÃO FINALIZADA. </p>
                         </div>
                     </div>
                 </div>
