--- a/html/results.html
+++ b/html/results.html
@@ -143,36 +143,36 @@
                     <br/>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de empate no topo do ranking, é possível segurar e arrastar
+                        <p class="mb-0 text-sm"> Em caso de EMPATE no topo do ranking, é possível SEGURAR E ARRASTAR
                             as opções para reordená-las. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Uma pontuação a partir de 65 e uma concordância a partir de 65% são
-                            consideradas boas. </p>
+                        <p class="mb-0 text-sm"> Uma PONTUAÇÃO a partir de 65 pontos e uma CONCORDÂNCIA a partir de 65% são
+                            consideradas BOAS PARA SEREM ACEITAS. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de pontuações baixas, podem ser efetuadas novas rodadas de
-                            avaliações pelos usuários, ou pode-se fazer uma escolha personalizada. </p>
+                        <p class="mb-0 text-sm"> Em caso de PONTUAÇÕES BAIXAS, podem ser efetuadas nOVAS RODADAS DE
+                            AVALIAÇÕES pelos usuários, ou pode-se fazer uma ESCOLHA PERSONALIZADA. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> A pontuação de valorização, isto é, o quanto a escolha é desejada,
-                            também pode ser utilizada como critério de desempate. Para consultar essa pontuação, basta
-                            clicar no item desejado. </p>
+                        <p class="mb-0 text-sm"> A PONTUAÇÃO DE VALORIZAÇÃO, isto é, o QUANTO A ESCOLHA É DESEJADA POR TODOS,
+                            também pode ser utilizada como CRITÉRIO DE DESEMPATE. Para consultar essa pontuação, basta
+                            CLICAR no item desejado. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Decisões com pendências, ou seja, aquelas onde existem stakeholders que
-                            precisam incluir/finalizar suas avaliações, não terão formação de ranking. Confira as
-                            pendências na dashboard.
+                        <p class="mb-0 text-sm"> Decisões com PENDÊNCIAS, ou seja, aquelas onde EXISTEM STAKEHOLDERS QUE
+                            PRECISAM INCLUIR/FINALIZAR SUAS AVALIAÇÕES, não terão formação de ranking. Confira as
+                            pendências na DASHBOARD.
                         </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Antes de tomar uma decisão, certifique-se de checar o impacto da mesma
-                            em cada participante. Basta clicar na opção desejada. </p>
+                        <p class="mb-0 text-sm"> Antes de tomar uma decisão, certifique-se de CHECAR O IMPACTO da mesma
+                            em cada participante. Basta CLICAR na opção desejada. </p>
                     </div>
                 </div>
             </div>
