--- a/html/results.html
+++ b/html/results.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Uma PONTUAÇÃO a partir de 65 pontos e uma CONCORDÂNCIA a partir de 65% são
+                        <p class="mb-0 text-sm"> Uma PONTUAÇÃO DE MOTIVAÇÃO/ENGAJAMENTO a partir de 60 pontos e uma CONCORDÂNCIA a partir de 65% são
                             consideradas BOAS PARA SEREM ACEITAS. </p>
                     </div>
                     <div class="d-flex">
