--- a/html/results.html
+++ b/html/results.html
@@ -135,6 +135,7 @@
                             <option value="1">TUDO</option>
                             <option value="2">DECIDIDOS</option>
                             <option value="3">NÃO DECIDIDOS</option>
+<!--                            <option value="4">SOMENTE MEUS</option>-->
                         </select>
                         <button id="btApplyFilter" class="btn btn-outline-white align-baseline"
                                 data-toggle="tooltip" title="Aplicar Filtro">APLICAR
