--- a/html/results.html
+++ b/html/results.html
@@ -135,7 +135,7 @@
                             <option value="1">TUDO</option>
                             <option value="2">DECIDIDOS</option>
                             <option value="3">NÃO DECIDIDOS</option>
-<!--                            <option value="4">SOMENTE MEUS</option>-->
+                            <option value="4" selected>SOMENTE MEUS</option>
                         </select>
                         <button id="btApplyFilter" class="btn btn-outline-white align-baseline"
                                 data-toggle="tooltip" title="Aplicar Filtro">APLICAR
@@ -165,8 +165,7 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Decisões com PENDÊNCIAS, ou seja, aquelas onde EXISTEM STAKEHOLDERS QUE
-                            PRECISAM INCLUIR/FINALIZAR SUAS AVALIAÇÕES, não terão formação de ranking. Confira as
+                        <p class="mb-0 text-sm"> Decisões com PENDÊNCIAS, ou seja, aquelas com avaliações incompletas / não iniciadas, não terão formação de ranking, ou não estarão com todas as opções disponíveis. Confira as
                             pendências na DASHBOARD.
                         </p>
                     </div>
