--- a/html/results.html
+++ b/html/results.html
@@ -165,6 +165,10 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
+                        <p class="mb-0 text-sm"> A CONCORDÂNCIA também pode ser utilizada para critério de DESEMPATE. </p>
+                    </div>
+                    <div class="d-flex">
+                        <i class="material-icons text-sm my-auto me-1">info</i>
                         <p class="mb-0 text-sm"> Decisões com PENDÊNCIAS, ou seja, aquelas com avaliações incompletas / não iniciadas, não terão formação de ranking, ou não estarão com todas as opções disponíveis. Confira as
                             pendências na DASHBOARD.
                         </p>
