--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -437,7 +437,7 @@
                         <div class="shadow-dark border-radius-lg pendencies text-dark">
                             <div class="table-responsive">
                                 <table class="table align-items-center mb-0 border-white border-line cursor-pointer"
-                                       onclick="window.location.href='/project/decisions?pendencies=true'"
+                                       onclick="window.location.href='/project/decisions?filter=3'"
                                        data-toggle="tooltip" title="Clique para sanar as suas pendências, caso existam!">
                                     <thead>
                                     <tr class="light-silver">
