--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -543,6 +543,7 @@
 <script src="/js/flow.js"></script>
 <script src="/js/animated.js"></script>
 <script src="/js/core/bootstrap.bundle.min.js"></script>
+<script src="/js/chroma.min.js"></script>
 <script src="/js/math.js"></script>
 <script src="/js/existing.js"></script>
 <script src="/js/jquery.modal.min.js"></script>
