--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h6 class="mb-0 "> Evolução geral da motivação </h6>
+                        <h6 class="mb-0 "> Evolução da motivação geral </h6>
                         <hr class="dark horizontal">
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
