--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -237,13 +237,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedStudentDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedStudentDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -251,8 +251,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="moreMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="moreMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -275,13 +275,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedStudentDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedStudentDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -289,8 +289,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="lessMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="lessMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -313,13 +313,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedCoursetDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedCoursetDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -327,8 +327,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="moreMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="moreMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -351,13 +351,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedCoursetDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedCoursetDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -365,8 +365,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="lessMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="lessMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
