--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -134,11 +134,11 @@
                             DECISÕES PARA TOMAR
                         </div>
                         <div class="pt-1 align-right margin-top-30-negative">
-                            <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
+                            <label for="selectDecisionsFilter"><b>EXIBIR MINHAS DECISÕES:</b></label>
                             <select id="selectDecisionsFilter" class="form-select-lg">
-                                <option value="1">TUDO</option>
-                                <option value="2">SOMENTE AVALIADOS</option>
-                                <option value="3">SOMENTE NÃO AVALIADOS</option>
+                                <option value="1">TODAS</option>
+                                <option value="2">SOMENTE AVALIADAS</option>
+                                <option value="3">SOMENTE NÃO AVALIADAS</option>
                             </select>
                             <button id="btApplyFilter" class="btn btn-outline-white align-baseline"
                                     data-toggle="tooltip" title="Aplicar Filtro">APLICAR
