--- a/html/admin.html
+++ b/html/admin.html
@@ -65,14 +65,14 @@
                     <span class="nav-link-text ms-1">Dashboard</span>
                 </a>
             </li>
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link text-white " href="/project/results">-->
-<!--                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">-->
-<!--                        <i class="material-icons opacity-10">military_tech</i>-->
-<!--                    </div>-->
-<!--                    <span class="nav-link-text ms-1">Resultados</span>-->
-<!--                </a>-->
-<!--            </li>-->
+            <li class="nav-item">
+                <a class="nav-link text-white " href="/project/results">
+                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="material-icons opacity-10">military_tech</i>
+                    </div>
+                    <span class="nav-link-text ms-1">Resultados</span>
+                </a>
+            </li>
         </ul>
     </div>
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
@@ -216,13 +216,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedStudentDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedStudentDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -230,8 +230,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="moreMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="moreMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -254,13 +254,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedStudentDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedStudentDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -268,8 +268,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="lessMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="lessMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedStudentDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedStudentDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -292,13 +292,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedCoursetDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#moreMotivatedCoursetDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -306,8 +306,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="moreMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="moreMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="moreMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -330,13 +330,13 @@
                         <br/>
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedCoursetDiv" type="button" role="tab"
                                         aria-selected="true">E-V-C
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link custom-border-white" data-bs-toggle="tab"
+                                <button class="nav-link active custom-border-white" data-bs-toggle="tab"
                                         data-bs-target="#lessMotivatedCoursetDiv2" type="button" role="tab"
                                         aria-selected="false">EVC
                                 </button>
@@ -344,8 +344,8 @@
                         </ul>
                     </div>
                     <div class="card-body p-3 text-center cart-margin-top tab-content">
-                        <div id="lessMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade show active"></div>
-                        <div id="lessMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedCoursetDiv" class="radar-chart-motivated tab-pane fade"></div>
+                        <div id="lessMotivatedCoursetDiv2" class="radar-chart-motivated tab-pane fade show active"></div>
                     </div>
                     <hr class="dark horizontal my-0">
                     <div class="card-footer p-3 align-right">
@@ -427,7 +427,7 @@
                                     </tr>
                                     </thead>
                                     <tbody id="tablePendencies">
-                                        <tr class='pendency-row text-2xl'><td colspan='2'><center>-- SEM PENDÊNCIAS --</center></td></tr>
+                                    <tr class='pendency-row text-2xl'><td colspan='2'><center>-- SEM PENDÊNCIAS --</center></td></tr>
                                     </tbody>
                                 </table>
                             </div>
